--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "concurrently \"next dev --turbopack\" \"npx prisma studio\"",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -15,6 +15,7 @@
 		"@prisma/adapter-neon": "^6.5.0",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"bcrypt-ts-edge": "^3.0.1",
 		"class-variance-authority": "^0.7.1",
@@ -39,6 +40,7 @@
 		"@types/react-dom": "^19",
 		"@types/ws": "^8.18.0",
 		"bufferutil": "^4.0.9",
+		"concurrently": "^9.1.2",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.4",
 		"prisma": "^6.5.0",
