--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \"next dev --turbopack\" \"npx prisma studio\"",
+		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "^2.8.0",
+		"@hookform/resolvers": "^4.1.3",
 		"@neondatabase/serverless": "^1.0.0",
 		"@prisma/adapter-neon": "^6.5.0",
 		"@radix-ui/react-dialog": "^1.1.6",
@@ -26,6 +27,7 @@
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.55.0",
 		"sonner": "^2.0.2",
 		"tailwind-merge": "^3.0.2",
 		"tw-animate-css": "^1.2.4",
