--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@neondatabase/serverless": "^1.0.0",
 		"@paypal/react-paypal-js": "^8.8.2",
 		"@prisma/adapter-neon": "^6.5.0",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
 		"@radix-ui/react-label": "^2.1.2",
@@ -32,6 +33,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.55.0",
+		"recharts": "^2.15.2",
 		"sonner": "^2.0.2",
 		"tailwind-merge": "^3.0.2",
 		"tw-animate-css": "^1.2.4",
