--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
 		"bcrypt-ts-edge": "^3.0.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.484.0",
-		"next": "15.2.4",
+		"next": "15.3.0",
 		"next-auth": "5.0.0-beta.25",
 		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
@@ -42,6 +44,7 @@
 		"tailwind-merge": "^3.0.2",
 		"tw-animate-css": "^1.2.4",
 		"uploadthing": "^7.6.0",
+		"vaul": "^1.1.2",
 		"ws": "^8.18.1",
 		"zod": "^3.24.2"
 	},
